# SlicerImpactReg

./: .gitignore  CMakeLists.txt  README.md  SuperBuild.cmake
ImpactReg/: CMakeLists.txt  ImpactReg.py
ImpactReg/Resources/UI/: ElastixImpactReg.ui  ImpactReg.ui
SuperBuild/: External_elastix.cmake  External_torch.cmake
